--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start -p 3003"
   },
   "dependencies": {
+    "@headlessui/react": "^0.3.2",
     "@lottiefiles/react-lottie-player": "^3.1.0",
+    "@splidejs/react-splide": "^0.4.4",
     "axios": "^0.21.1",
     "hamburger-react": "^2.4.0",
     "mobx": "^6.1.8",
@@ -16,7 +18,9 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-toastify": "^7.0.3",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
