--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@headlessui/react": "^0.3.2",
     "@lottiefiles/react-lottie-player": "^3.1.0",
-    "@splidejs/react-splide": "^0.4.4",
     "axios": "^0.21.1",
     "hamburger-react": "^2.4.0",
+    "keen-slider": "^5.4.0",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
     "next": "latest",
@@ -21,7 +21,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^7.0.3",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "video.js": "^7.11.4",
+    "videojs-overlay": "^2.1.4"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
