--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start -p 3004"
+    "start": "next start -p 3004",
+    "production": "next build && next start -p 3004"
   },
   "dependencies": {
     "@headlessui/react": "^0.3.2",
