--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^7.0.3",
+    "react-use": "^17.2.4",
     "universal-cookie": "^4.0.4",
     "video.js": "^7.11.4",
     "videojs-hotkeys": "^0.2.27",
