--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mobx-react-lite": "^3.2.0",
     "next": "latest",
     "react": "^17.0.1",
+    "react-avatar-edit": "^1.0.0",
+    "react-avatar-image-cropper": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
