--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-avatar-edit": "^1.0.0",
     "react-avatar-image-cropper": "^1.3.7",
     "react-dom": "^17.0.1",
+    "react-easy-crop": "^3.3.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^7.0.3",
